# linux-parprog-mpi

Isemari.shared/: 30k.in  hello-omp.c  hello.c  hosts.sh  my_hosts  run-omp.sh
parallel-coding/: CMakeLists.txt  huffman.cpp  huffman.h  main.cpp
